--- a/npcs/varun_bakerfield.yaml
+++ b/npcs/varun_bakerfield.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: older adult
+    age: Older Adult
 
     #
     # Races (case insensitive):
@@ -464,31 +464,61 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills: 
+    saving-throws:
+    - Strength
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
+    skills:
+    - N/A
+    proficiencies:
+    - Athletics
+    - Perception
+    - Deception    
+    - Intimidation
+    - Persuasion
+    - Stealth
+    - Sleight-of-Hand
+    - Thieve's Tools
+  special-abilities:
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+    - title: Evasion
+    - content: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
+  - title: Mastermind Abilities
+  - abilities: 
+    - title: Master of Intrigue
+    - content: You gain proficiency with the disguise kit, the forgery kit, and one gaming set of your choice. You also learn two languages of your choice. Additionally, you can unerringly mimic the speech patterns
+               and accent of a creature that you hear speak for at least 1 minute, enabling you to pass yourself off as a native speaker of a particular land, provided that you know the language
+    - title: Master of Tactics
+    - content: You can use the Help action as a bonus action. Additionally, when you use the Help action to aid an ally in attacking a creature, the target of that attack can be within 30 feet of you, rather than
+               5 feet of you, if the target can see or hear you
 
-    - Rogue Abilities:
-       - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-       - Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-       - Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-       - Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
-       - Evasion: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
-       
-    - Mastermind Abilities:
-         - Master of Intrigue: you gain proficiency with the disguise kit, the forgery kit, and one gaming set of your choice. You also learn two languages of your choice. Additionally, you can unerringly mimic the speech
-                               patterns and accent of a creature that you hear speak for at least 1 minute, enabling you to pass yourself off as a native speaker of a particular land, provided that you know the language.
-         - Master of Tactics: you can use the Help action as a bonus action. Additionally, when you use the Help action to aid an ally in attacking a creature, the target of that attack can be within 30 feet of you, rather than
-                              5 feet of you, if the target can see or hear you
-       
-    special-abilities:
-       - Proficiencies: Perception, Intimidation, Athletics, Stealth
-       - Feats: Crusher, Grappler
-       - can cast the Charm Person spell at 4th level without using components or verbal commands twice per day. The effects of the charm spell last 3 times as long as normal
-    attacks: |
-      1 attack with club
-    combat-tactics: |
-      Usually has his lackeys do his fighting for him, but he's not afraid to get his hands or his club dirty from time to time
-    special-equipment:      
-    - Widowmaker: +3 Great Club    
+  - title: Feats
+  - content: Crusher, Grappler, Inspiring Leader
+  - title: Making Friends
+  - content: He can cast the Charm Person spell at 4th level without using components or verbal commands twice per day. The effects of the charm spell last 3 times as long as normal
+  - title: Attacks
+  - content: 1 attack with club
+  - title: Combat Tactics
+  - content: Usually has his lackeys do his fighting for him, but he's not afraid to get his hands or his club dirty from time to time
+
+  - title: Special Equipment
+  - abilities:
+    - title: Widowmaker
+    - content: +3 Great Club    
     
     
   profile:
